# Universidad

./: .gitignore  README.md  historial-de-commits.txt  maquina.mdj
ALGEBRA LINEAL/: 1.Interes_simple.psc  1.Nota promedio de un curso de N estudiantes y aprobados .psc  1.POSITIVO O NEGATIVO.psc  10.1 decir si un numero es capicua  10.Decir cuántos estudiantes pasaron y cuantos perdieron en un curso de N estudiantes  10.decir si un numero es capicua  10.interes compuesto.psc  18-4.Hallar Euler  2. Ordenar 2 numeros ascendentemente  2.Calculadora de digitos.psc  2.LEER_UN_NUMSI_ES_MAYOR0_SUMELE_20_SI_NO_RESTELE_30  2.area del triángulo.psc  2doParcial201911913.psc  3 digitos.psc  3.Armstrong.psc  3.Cual es el menor de dos numeros  3.volumen del cilindro.psc  32.Permutaciones.pc  33.combinacion.psc  4. Decir si un numero es par o impar  4.1.raíz cuadrada de cualquier numero.psc  4.Cuenta_de_ahorros.psc  4.raíz cuadrada de 25.psc  5. Decir si un numero es multiplo de 9.psc  5.Escribir la serie 0  3  8  15…. sumando 3, 5, 7  5.factorial  5.x al cubo.psc  6.Decir si un numero termina en 7  6.raíz 5 de x a la 4.psc  7.Calcular la nota promedio de un curso de N estudiantes  7.Presenta o no declaracion de renta  7.potencia 5 y la raíz cúbica de un número.psc  8. Decir si un numero positivo tiene 2 digitos.psc  8.Hallar la mayor nota de un curso de N estudiantes  8.promedio de 3 números.psc  9.Decir si el primer y segundo digitos son iguales  Cafeteria.psc  (+35 more)
Programacion III/Parcial/: CMakeLists.txt  PatientContributor.cpp  PatientContributor.h  PatientSubsidized.h  ServicePatient.h
(+829 files in other folders)
